poprawiona baza danych, przeniesiony permissions z pracownik do fun_prac zrobiony widok do naprawy

--- a/application/_admin/view/const/menu.phtml
+++ b/application/_admin/view/const/menu.phtml
@@ -1,5 +1,14 @@
 <div id="menu">
 	<ul class="firstLevel">
+		<!-- ZADANIA -->
+		<li class="<?= $this->_controllerName=='zarzadzaniezadaniami' ? 'active':''; ?>">
+			<a><span class="title">Naprawy</span></a>
+			<ul class="child">
+				<li><a href="<?= $this->directoryUrl.'/zarzadzaniezadaniami/index'; ?>">Rezerwuj termin</a></li>
+				<li><a href="<?= $this->directoryUrl.'/zarzadzaniezadaniami/newcustomer'; ?>">Przeglądaj naprawy</a></li>
+			</ul>
+		</li>
+
 		<!-- KLIENCI -->
 		<li class="<?= $this->_controllerName=='zarzadzanieklientem' ? 'active':''; ?>">
 			<a><span class="title">Klienci</span></a>
