--- a/application/_admin/view/zarzadzaniemechanikami/newmechanic.phtml
+++ b/application/_admin/view/zarzadzaniemechanikami/newmechanic.phtml
@@ -35,7 +35,7 @@
 				<input type="text" name="dane[dosw]">
 			</div>
 			<div class="row">
-				<label>Dyspozycyjność <span class="small">1 - tak, 0 - nie</span</label>
+				<label>Dyspozycyjność <span class="small">1 - tak, 0 - nie</span></label>
 				<input type="text" name="dane[dysp]">
 			</div>
 			<div class="row">
