--- a/application/_admin/view/zarzadzanieobslugakli/editservice.phtml
+++ b/application/_admin/view/zarzadzanieobslugakli/editservice.phtml
@@ -31,16 +31,12 @@
 				<input type="text" name="dane[spe]" value="<?php echo $this->service['specj'];?>">
 			</div>
                     <div class="row">
-				<label>Doświadczenie zawodowe </label>
+				<label>Doświadczenie zawodowe <span class="small">podać w latach</span></label>
 				<input type="text" name="dane[dosw]" value="<?php echo $this->service['dosw_zaw'];?>">
 			</div>
                     <div class="row">
-				<label>Dyspozycyjność </label>
+				<label>Dyspozycyjność <span class="small">1 - tak, 0 - nie</span></label>
 				<input type="text" name="dane[dysp]" value="<?php echo $this->service['dyspoz'];?>">
-			</div>
-                    <div class="row">
-				<label>Obsługiwane stanowiska </label>
-				<input type="text" name="dane[stan]" value="<?php echo $this->service['obsl_stan'];?>">
 			</div>
 		</div>
 
