--- a/application/_admin/view/zarzadzanieobslugakli/newservice.phtml
+++ b/application/_admin/view/zarzadzanieobslugakli/newservice.phtml
@@ -4,11 +4,11 @@
 		<div class="group">
 			<div class="row">
 				<label>Imię </label>
-                                <input type="text" name="dane[imie]">
+                <input type="text" name="dane[imie]">
 			</div>
-                    <div class="row">
+            <div class="row">
 				<label>Nazwisko </label>
-                                <input type="text" name="dane[nazw]">
+                <input type="text" name="dane[nazw]">
 			</div>
 			<div class="row">
 				<label>PESEL </label>
@@ -30,17 +30,13 @@
 				<label>Specjalizacja </label>
 				<input type="text" name="dane[spe]">
 			</div>
-                    <div class="row">
-				<label>Doświadczenie zawodowe </label>
+            <div class="row">
+				<label>Doświadczenie zawodowe <span class="small">podać w latach</span></label>
 				<input type="text" name="dane[dosw]">
 			</div>
-                    <div class="row">
-				<label>Dyspozycyjność </label>
+            <div class="row">
+				<label>Dyspozycyjność <span class="small">1 - tak, 0 - nie</span></label>
 				<input type="text" name="dane[dysp]">
-			</div>
-                    <div class="row">
-				<label>Obsługiwane stanowiska </label>
-				<input type="text" name="dane[stan]">
 			</div>
 		</div>
 
