--- a/application/_admin/view/zarzadzaniezadaniami/addrepair.phtml
+++ b/application/_admin/view/zarzadzaniezadaniami/addrepair.phtml
@@ -32,7 +32,7 @@
             </div>
             <div class="row">
                 <label>Cena naprawy <span class="small">gdy nieznana pozostawić puste</span></label>
-                <input type="text" name="info">
+                <input type="text" name="price">
             </div>
         </div>
 
