--- a/application/_admin/view/zarzadzaniezadaniami/editrepair.phtml
+++ b/application/_admin/view/zarzadzaniezadaniami/editrepair.phtml
@@ -35,7 +35,7 @@
                     <div class="col" style="width:255px;"><?= $mechanic['Imie'].' '.$mechanic['Nazw']; ?></div>
                     <div class="col" style="width:180px; font-size: 14px;"><?= $mechanic['pesel']; ?></div>
                     <div class="col" style="width:195px; font-size: 14px;"><?= $mechanic['nr_tel']; ?></div>
-                    <div class="col opCol" style="width: 60px"><input type="checkbox" name="mechanic[]" value="<?= $mechanic['id']; ?>"></div>
+                    <div class="col opCol" style="width: 60px"><input type="checkbox" name="mechanic[]" value="<?= $mechanic['id']; ?>" <?= in_array($mechanic['id'], $this->curmechanics) ? 'checked':''; ?>></div>
                 </li>
             <?php endforeach; ?>
         </ul> 
@@ -59,11 +59,12 @@
                     <div class="col" style="width:105px; font-size: 14px;"><?= $place['wymiary']; ?></div>
                     <div class="col" style="width:55px; font-size: 14px;"><?= $place['Posiad_tun'] ? 'tak':'nie'; ?></div>
                     <div class="col" style="width:235px; font-size: 14px;"><?= $place['przezn']; ?></div>
-                    <div class="col opCol" style="width: 60px"><input type="radio" name="dane[place]" value="<?= $place['id']; ?>" <?= $place['id']==$this->repair['stanowisko_id'] ? 'checked':''; ?>></div>
+                    <div class="col opCol" style="width: 60px"><input type="radio" name="dane[place]" value="<?= $place['id']; ?>" <?= $place['id']==$this->repair['Stanowisko_ID'] ? 'checked':''; ?>></div>
                 </li>
             <?php endforeach; ?>
         </ul>
 
         <input type="hidden" name="date" value="<?= $this->date; ?>">
+        <input type="hidden" name="oldmechanics" value="<?= join(",", $this->curmechanics); ?>">
     </form>
 </div> 
