--- a/application/_page/view/naprawa/index.phtml
+++ b/application/_page/view/naprawa/index.phtml
@@ -1,19 +1,23 @@
-<p class="h2">Lista napraw</p>
-<ul class="table productTable">
-	<li class="naglowek">
-		<div class="col" style="width:80px">Auto id</div>
-		<div class="col" style="width:250px">Samochód</div>
-		<div class="col" style="width:155px">Data </div>
-		<div class="col last" style="width:90px">Cena</div>
-		<div class="col" style="width:175px">Status</div>
-	</li>
-	<?php foreach($this->repairs as $this->repair): ?>
-		<li class="middle">
-			<div class="col" style="width:80px;"><?= $this->repair['ID']; ?></div>
-			<div class="col" style="width:250px;"><?= $this->repair['Marka'].' '.$this->repair['Model'].' '.$this->repair['Rok_pr']; ?></div>
-			<div class="col" style="width:155px;"><?= $this->_filter->convertDatetimeToDate($this->repair['Data']); ?></div>
-			<div class="col" style="width:90px"><?= $this->repair['Cena']==0 ? 'brak':$this->repair['Cena'].'zł'; ?></div>
-			<div class="col" style="width:175px; font-size: 14px;"><?= $this->repair['Status']; ?></div>
+<?php if(count($this->repairs)>0): ?>
+	<p class="h2">Lista napraw</p>
+	<ul class="table productTable">
+		<li class="naglowek">
+			<div class="col" style="width:80px">Auto id</div>
+			<div class="col" style="width:250px">Samochód</div>
+			<div class="col" style="width:155px">Data </div>
+			<div class="col last" style="width:90px">Cena</div>
+			<div class="col" style="width:175px">Status</div>
 		</li>
-	<?php endforeach; ?>
-</ul>
+		<?php foreach($this->repairs as $this->repair): ?>
+			<li class="middle">
+				<div class="col" style="width:80px;"><?= $this->repair['ID']; ?></div>
+				<div class="col" style="width:250px;"><?= $this->repair['Marka'].' '.$this->repair['Model'].' '.$this->repair['Rok_pr']; ?></div>
+				<div class="col" style="width:155px;"><?= $this->_filter->convertDatetimeToDate($this->repair['Data']); ?></div>
+				<div class="col" style="width:90px"><?= $this->repair['Cena']==0 ? 'brak':$this->repair['Cena'].'zł'; ?></div>
+				<div class="col" style="width:175px; font-size: 14px;"><?= $this->repair['Status']; ?></div>
+			</li>
+		<?php endforeach; ?>
+	</ul>
+<?php else: ?>
+	<div class="information">Brak napraw.</div>
+<?php endif; ?>
