--- a/application/_page/view/samochod/index.phtml
+++ b/application/_page/view/samochod/index.phtml
@@ -1,25 +1,29 @@
-<p class="h3" style="margin: 100px 0 30px 0">Lista samochodów</p>
-<ul class="table productTable" style="margin-bottom: 100px">
-	<li class="naglowek">
-		<div class="col" style="width:60px">id</div>
-		<div class="col" style="width:150px">Marka</div>
-		<div class="col" style="width:100px">Model</div>
-		<div class="col" style="width:80px">Rok</div>
-		<div class="col" style="width:50px">Poj.</div>
-		<div class="col" style="width:80px">R.S.</div>
-		<div class="col" style="width:155px">Rodzaj nadwozia</div>
-		<div class="col last" style="width:60px">opcje</div>
-	</li>
-	<?php foreach($this->cars as $this->car): ?>
-		<li class="middle">
-			<div class="col" style="width: 60px;"><?= $this->car['id']; ?></div>
-			<div class="col" style="width:150px;"><?= $this->car['Marka']; ?></div>
-			<div class="col" style="width:100px;"><?= $this->car['Model']; ?></div>
-			<div class="col" style="width:80px;"><?= $this->car['Rok_pr']; ?></div>
-			<div class="col" style="width:50px;"><?= $this->car['poj_sil']; ?></div>
-			<div class="col" style="width:80px;"><?= $this->car['Rodz_sil']; ?></div>
-			<div class="col" style="width:155px;"><?= $this->car['Rodz_nadw']; ?></div>
-			<div class="col opCol" style="width: 60px"><div class="highlight" onclick="javascript:objectMenu.toggle($(this));"><?= $this->buttonListEdit; ?><?= $this->renderContent("samochod/editMenu.phtml"); ?></div></div>
+<?php if(count($this->cars)>0): ?>
+	<p class="h3" style="margin: 100px 0 30px 0">Lista samochodów</p>
+	<ul class="table productTable" style="margin-bottom: 100px">
+		<li class="naglowek">
+			<div class="col" style="width:60px">id</div>
+			<div class="col" style="width:150px">Marka</div>
+			<div class="col" style="width:100px">Model</div>
+			<div class="col" style="width:80px">Rok</div>
+			<div class="col" style="width:50px">Poj.</div>
+			<div class="col" style="width:80px">R.S.</div>
+			<div class="col" style="width:155px">Rodzaj nadwozia</div>
+			<div class="col last" style="width:60px">opcje</div>
 		</li>
-	<?php endforeach; ?>
-</ul>
+		<?php foreach($this->cars as $this->car): ?>
+			<li class="middle">
+				<div class="col" style="width: 60px;"><?= $this->car['id']; ?></div>
+				<div class="col" style="width:150px;"><?= $this->car['Marka']; ?></div>
+				<div class="col" style="width:100px;"><?= $this->car['Model']; ?></div>
+				<div class="col" style="width:80px;"><?= $this->car['Rok_pr']; ?></div>
+				<div class="col" style="width:50px;"><?= $this->car['poj_sil']; ?></div>
+				<div class="col" style="width:80px;"><?= $this->car['Rodz_sil']; ?></div>
+				<div class="col" style="width:155px;"><?= $this->car['Rodz_nadw']; ?></div>
+				<div class="col opCol" style="width: 60px"><div class="highlight" onclick="javascript:objectMenu.toggle($(this));"><?= $this->buttonListEdit; ?><?= $this->renderContent("samochod/editMenu.phtml"); ?></div></div>
+			</li>
+		<?php endforeach; ?>
+	</ul>
+<?php else: ?>
+	<div class="information">Brak samochodów</div>
+<?php endif; ?>
